--- a/dist.ini
+++ b/dist.ini
@@ -2,11 +2,12 @@ name    = DBIx-Class-ResultSet-SetControl
 author  = John Napiorkowski <jjnapiork@cpan.org>
 license = Perl_5
 copyright_holder = John Napiorkowski
-copyright_year   = 2017
+copyright_year   = 2019
 abstract = Easier Looping over resultsets
-version = 0.001
+version = 0.002
 
 [@Basic]
+[MetaJSON]
 
 [MetaResources]
 homepage = https://github.com/jjn1056/DBIx-Class-ResultSet-SetControl
