Auto generate minimum perl version using [MinimumPerlFast].

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,7 @@ version = 0.002
 
 [@Basic]
 [MetaJSON]
+[MinimumPerlFast]
 
 [MetaResources]
 homepage = https://github.com/jjn1056/DBIx-Class-ResultSet-SetControl
